@@ -2,20 +2,47 @@ apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'jacoco'
 
-sourceCompatibility = 17
-
 repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
 
 dependencies {
-	implementation project(':Triangle.AbstractMachine')
-	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    implementation project(':Triangle.AbstractMachine')
+    implementation group: 'com.github.spullara.cli-parser', name: 'cli-parser', version: '1.1.5'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.3'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.11.3'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.3'
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
 }
 
 application {
-	mainClass = 'Triangle.Compiler'
+    mainClass = 'triangle.Compiler'
 }
 
 // allow access to programs for unit tests
